# email-balls

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pi-report-todo-45  pi-report-todo-46  pi-report-todo-47  pi-report-todo-59  pi-report-todo-60  pi-report-todo-61  pnpm-lock.yaml  solo.yml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
docs/: ARCHITECTURE.md
src/: App.css  App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/avatar/: bimi.rs  cache.rs  mod.rs
src-tauri/src/db/: error.rs  mod.rs
src-tauri/src/imap/: auth.rs  client.rs  error.rs  idle.rs  mod.rs  state.rs  types.rs
src/components/: AccountsStage.module.css  AccountsStage.tsx  BubbleLayer.module.css  BubbleLayer.tsx  Drawer.tsx  DrawersLayer.tsx  EmailBodyDrawer.module.css  EmailBodyDrawer.test.tsx  EmailBodyDrawer.tsx  EmailHtmlFrame.module.css  EmailHtmlFrame.test.ts  EmailHtmlFrame.tsx  EmailListDrawer.module.css  EmailListDrawer.test.tsx  EmailListDrawer.tsx  EmailTextBody.tsx  SearchControls.module.css  SearchControls.tsx  SenderBubbles.module.css  SenderBubbles.test.tsx  SenderBubbles.tsx  SendersStage.tsx
src/hooks/: useGlobalShortcuts.ts  useImapEventBridge.ts  useImapIdleLifecycle.ts
src/lib/: accountStore.test.ts  accountStore.ts  avatar.ts  gravatar.ts  (+6 more)
(+14 files in other folders)
