[package]
name = "email-balls"
version = "0.1.0"
description = "Email Balls"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "email_balls_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imap = { version = "2.4.1", default-features = false, features = ["tls"] }
imap-proto = "0.10"
native-tls = "0.2"
mail-parser = "0.9"
thiserror = "1"
hickory-resolver = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
psl = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

# Required by tauri-plugin-stronghold — scrypt is unusably slow in dev otherwise.
[profile.dev.package.scrypt]
opt-level = 3
